--- a/src/assets/toolkit/styles/6-components/_components.dialogs.scss
+++ b/src/assets/toolkit/styles/6-components/_components.dialogs.scss
@@ -48,7 +48,7 @@ $popup-button-close-color: $black-tundora;
       padding: 0 $gap-small;
       color: $popup-button-close-color;
       
-      font-size: 170%;
+      font-size: $text-size-iconbtn;
       line-height: 1;
     }
 
