--- a/src/assets/toolkit/styles/0-core/variables/_variables.typography.scss
+++ b/src/assets/toolkit/styles/0-core/variables/_variables.typography.scss
@@ -91,6 +91,7 @@ $heading-weaker-color: $green-brand-weaker !default;
 $text-size:         1rem !default;
 
 /// @prop {size in %}Sizes relative to the parent's container settings (should be used for end elements only to avoid composition issues).
+$text-size-iconbtn: 170% !default;
 $text-size-massive: 150% !default;
 $text-size-huge:    115% !default;
 $text-size-larger:  107.5% !default;
