added new files

--- a/src/assets/toolkit/styles/toolkit.scss
+++ b/src/assets/toolkit/styles/toolkit.scss
@@ -139,6 +139,7 @@
 @import '6-components/navigation/components.footer';
 @import '6-components/navigation/components.breadcrumbs';
 @import '6-components/navigation/components.sub-nav';
+@import '6-components/navigation/components.sub-nav--refactored';
 @import '6-components/navigation/components.sidemenu';
 @import '6-components/navigation/component.menu-icons';
 @import '6-components/components.tiles';
