--- a/src/views/prototypes/subnav--withClasses.html
+++ b/src/views/prototypes/subnav--withClasses.html
@@ -55,84 +55,89 @@ footer:
         </figure>
       </div>
 
-        <section class="page-sub-nav nav-buttons hub-mega-menu mega-menu-bar" data-gtm-track>
+        <section class="mega-menu-bar c-megamenu" data-gtm-track>
           <div class="centraliser">
 
               <nav role="navigation">
-                <ul role="menubar" class="mega-menu-inner ">
-                  
-                  <div class="bg"></div>
+                <ul class="c-megamenu__inner">
                   <!-- <li>
                     <a role="menuitem" title="Course finder" href="{{baseurl}}/prototypes/research.html">Home</a>
                   </li> -->
-                  <li class="">
-                    <a role="menuitem" title="Course finder" href="{{baseurl}}/prototypes/research-strengths.html" class="">Research strengths </a>
-                    <span class="btn-expander" title="Toggle subpages"></span>
+                  <li class="c-megamenu__item">
+                    <a role="menuitem" title="Course finder" href="{{baseurl}}/prototypes/research-strengths.html" class="c-megamenu__link">
+                      Research strengths 
+                      <span aria-haspopup="true" class="c-megamenu__itemIcon"><i class="icon-triangle-down" title="Toggle subpages"></i></span>
+                    </a>
+
+                    <ul class="c-megamenu__childList">
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Research success</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Performance and rankings</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Research impact</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Faculty research</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Centres, institutes and chairs</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">News and commentary</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Research focus</a></li>
+                    </ul>
+                  </li>
+
+                  <li class="c-megamenu__item">
+                    <a role="menuitem" title="Faculties and Schools" href="{{baseurl}}/prototypes/research-degrees.html" class="c-megamenu__link">
+                      Research degrees
+                      <span aria-haspopup="true" class="c-megamenu__itemIcon"><i class="icon-triangle-down" title="Toggle subpages"></i></span>
+                    </a>
+
+                    <ul class="c-megamenu__childList">
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">PhDs and research degrees</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Postgraduate community</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Find a supervisor</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Funding your study</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">How to apply</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Research areas</a></li>
+                    </ul>
+                  </li>
+
+                  <li class="c-megamenu__item">
+                    <a href="{{baseurl}}/prototypes/research-partnerships.html" role="menuitem" title="Read about Campuses" class="c-megamenu__link">
+                      Research partnerships
+                      <span aria-haspopup="true" class="c-megamenu__itemIcon"><i class="icon-triangle-down" title="Toggle subpages"></i></span>
+                    </a>
+
+                    <ul class="c-megamenu__childList">
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Support our research</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Research collaboration</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Commercialising research</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Engage our students</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Māori research partnerships</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Development and education</a></li>
+                    </ul>
+                  </li>
+
+                  <li class="c-megamenu__item">
+                    <a role="menuitem" title="" href="{{baseurl}}/prototypes/research-strengths.html" class="c-megamenu__link">
+                      Find a researcher
+                      <span aria-haspopup="true" class="c-megamenu__itemIcon"><i class="icon-triangle-down" title="Toggle subpages"></i></span>
+                    </a>
                     
 
-                    <ul>
-
-                      <li><a title="" href="#">Research success</a></li>
-                      <li><a title="" href="#">Performance and rankings</a></li>
-                      <li><a title="" href="#">Research impact</a></li>
-                      <li><a title="" href="#">Faculty research</a></li>
-                      <li><a title="" href="#">Centres, institutes and chairs</a></li>
-                      <li><a title="" href="#">News and commentary</a></li>
-                      <li><a title="" href="#">Research focus</a></li>
+                    <ul class="c-megamenu__childList">
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Find an expert </a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Featured researchers</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Performance and rankings</a></li>
                     </ul>
                   </li>
+                  <li  class="c-megamenu__item c-megamenu__item--active">
+                    <a title="Faculties and Schools" href="{{baseurl}}/prototypes/our-researchers.html" class="c-megamenu__link">
+                      Support for researchers
+                      <span aria-haspopup="true" class="c-megamenu__itemIcon"><i class="icon-triangle-down" title="Toggle subpages"></i></span>
+                    </a>
 
-                  <li>
-                    <a role="menuitem" title="Faculties and Schools" href="{{baseurl}}/prototypes/research-degrees.html" class="">Research degrees</a>
-                    <span class="btn-expander" title="Toggle subpages"></span>
-
-                    <ul>
-
-                      <li><a title="" href="#">PhDs and research degrees</a></li>
-                      <li><a title="" href="#">Postgraduate community</a></li>
-                      <li><a title="" href="#">Find a supervisor</a></li>
-                      <li><a title="" href="#">Funding your study</a></li>
-                      <li><a title="" href="#">How to apply</a></li>
-                      <li><a title="" href="#">Research areas</a></li>
+                    <ul class="c-megamenu__childList">
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Research ethics</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Māori research practices</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">New research staff</a></li>
+                      <li class="c-megamenu__childItem"><a class="c-megamenu__childLink" title="" href="#">Research Office</a></li>
                     </ul>
                   </li>
-                  <li role="menuitem">
-                    <a href="{{baseurl}}/prototypes/research-partnerships.html" role="menuitem" title="Read about Campuses">Research partnerships</a>
-                    <span class="btn-expander" title="Toggle subpages"></span>
-
-                    <ul>
-
-                      <li><a title="" href="#">Support our research</a></li>
-                      <li><a title="" href="#">Research collaboration</a></li>
-                      <li><a title="" href="#">Commercialising research</a></li>
-                      <li><a title="" href="#">Engage our students</a></li>
-                      <li><a title="" href="#">Māori research partnerships</a></li>
-                      <li><a title="" href="#">Development and education</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a role="menuitem" title="" href="{{baseurl}}/prototypes/research-strengths.html" class="">Find a researcher</a>
-                    <span class="btn-expander" title="Toggle subpages"></span>
-
-                    <ul>
-                      <li><a title="" href="#">Find an expert </a></li>
-                      <li><a title="" href="#">Featured researchers</a></li>
-                      <li><a title="" href="#">Performance and rankings</a></li>
-                    </ul>
-                  </li>
-                  <li class="active">
-                    <a role="menuitem" title="Faculties and Schools" href="{{baseurl}}/prototypes/our-researchers.html" class="active">Support for researchers</a>
-                    <span class="btn-expander" title="Toggle subpages"></span>
-
-                    <ul>
-
-                      <li><a title="" href="#">Research ethics</a></li>
-                      <li><a title="" href="#">Māori research practices</a></li>
-                      <li><a title="" href="#">New research staff</a></li>
-                      <li><a title="" href="#">Research Office</a></li>
-                    </ul>
-                  </li>
-                  
                 </ul>
               </nav>
 
