--- a/src/assets/toolkit/styles/6-components/navigation/_components.sub-nav--refactored.scss
+++ b/src/assets/toolkit/styles/6-components/navigation/_components.sub-nav--refactored.scss
@@ -3,729 +3,77 @@
 ==================================================*/
 
 
-.page-sub-nav {
-  border-bottom: 5px solid $green-brand;
-  background-color: $black-brand;
-
-  .centraliser {
-    nav {
-      > ul {
-        display: flex;
-        justify-content: center;
-        flex-wrap: nowrap;
-
-       > li {
-          margin-right: 0;
-          margin-left: 0;
-
-          // TODO: Refactor - inappropriate depth
-         > a {
-            display: block;
-            padding: $gap-half $gap-horizontal;
-            font-size: $navigation-primary-item-size;
-            color: $white;
-            text-decoration: none;
-            letter-spacing: $navigation-letter-spacing;
-
-            &.active { background-color: $green-brand; }
-
-            @include hoverify() {
-              text-decoration: underline;
-              background-color: $green-brand;
-              transition: all .5s ease;
-            }
-          }
-        }
-
-        @include bp-desktop-large {
-          padding: 0 $gap-horizontal;
-        }
-
-        @include breakpoint( desktop ) {
-          li a {
-            padding: .5em 1.2em;
-            text-align: center;
-          }
-        }
-
-        @include breakpoint( $until: desktop ) {
-          justify-content: flex-start;
-          flex-wrap: wrap;
-          text-align: left;
-
-          li { width: 100%; }
-        }
-      }
-
-    }
-  }
-
-  &.nav-buttons {
-    background-color: transparent;
-    border: 0;
-
-    @include breakpoint( desktop ) {
-      margin: 1.6rem 0;
-    }
-
-    nav {
-      //top level
-      > ul {
-        margin: 0 1.6rem;
-
-        > li {
-          flex: 1 1 auto;
-           > a {
-              background-color: $green-brand;
-              border-radius: 2px;
-              border-bottom: 5px solid $green-bottle;
-              text-align: center;
-              padding: .5rem 1rem calc( .5rem - 5px );
-
-
-              @include hoverify() {
-                background-color: darken($green-brand, 5%);
-              }
-
-              &.active {
-                background-color: darken($green-brand, 5%);
-                border-bottom-color: lighten($green-bottle, 4%);
-
-                position: relative;
-
-                &:before {
-                  position: absolute;
-                  display: inline-block;
-                  content: "";
-                  background-color: #FFF;
-                  width: 3px;
-                  height: 50%;
-                  top: 55%;
-                  transform: translateY(-50%);
-                  left: .7rem;
-
-                  @include bp-desktop {
-                    left: 5%;
-                  }
-                }
-              }
-            }
-
-          &:not(:last-child) {
-            margin-right: 1rem;
-          }
-        }
-
-        @include breakpoint( $until: desktop ) {
-          margin: 0;
-
-          > li {
-            a {
-              text-align: left;
-              border-radius: 0;
-              padding: .5rem 1.5rem calc( .5rem - 3px );
-              border-bottom-width: 3px;
-            }
-
-            &:not(:last-child) {
-              margin-right: 0;
-            }
-          }
-        }
-
-        @include breakpoint( desktop ) {
-          > li {
-            a {
-              // fixes border-radius rogue pixel;
-              background-clip: padding-box;
-            }
-          }
-        }
-      }
-    }
-
-    @include bp-tablet {
-      margin-top: 0;
-    }
-
-    &.hub-mega-menu {
-      nav {
-
-        > ul {
-          font-family: $heading-family;
-          padding: 0;
-
-          &:not(.expanded) {
-            .btn-expander::after { 
-              content: "";
-              border-left: .25em solid transparent;
-              border-right: .25em solid transparent;
-              border-top: .25em solid #fff;
-              top: -.15em;
-              position: relative;
-              display: inline-block;
-              width: 0;
-              height: 0;
-            }
-          }
-          
-          > li {
-            display: flex;
-            position: relative;
-            flex: 1;
-            align-content: flex-start;
-            background-color: #115737;
-            border-bottom: 5px solid #0D4B2F;
-
-            &:last-child {
-              .btn-expander {
-                right: 0;
-              }
-            }
-
-            .btn-expander {
-              @include size( 1.4em );
-              display: inline-block;
-              margin: 0 .5rem;
-              align-self: center;
-              cursor: pointer;
-              text-align: center;
-              font-weight: $weight-bold;
-              color: $white;
-              line-height: 1.4;
-              font-size: 1.2em;
-              border-radius: .7em;
-          
-              @include hoverify() {
-                color: $white;
-                background-color: rgba( $black, .2 );
-              }
-            }
-
-            > a {
-              display: flex;
-              align-items: center;
-              flex: 1 1;
-              padding: .8rem 1rem .5rem 1rem;
-              text-align: left;
-              color: $grey-alto;
-              background-clip: inherit;
-              border-bottom: none;
-              line-height: 1.3;
-              color: $white;
-              font-weight: 600; 
-
-              @include hoverify() {
-                background-color: $green-brand;
-              }
-            }
-            
-            &.active {
-
-              a {
-                color: $white;
-                font-weight: 600;
-              }
-
-              > a {
-                background-color: $green-brand;
-                border-bottom-color: $green-bottle;
-
-                &:before {
-                  content: none;
-                  transform: none;
-                }
-
-                &:after {
-                  position: absolute;
-                  left: .5rem;
-                  height: 55%;
-                  top: 55%;
-                  display: inline-block;
-                  content: "";
-                  background-color: #FFF;
-                  width: 2px;
-                  transform: translateY(-55%);
-                }
-              }  
-            }
-            
-            > ul {
-              display: none;
-            }
-          }
-
-          &.expanded {
-            padding: 0;
-            position: relative;
-            
-            .bg {
-              position: absolute;
-              top: 13%;
-              background-color: $green-bottle;
-              width: 100%;
-              height: calc(100% - 13%);
-              content: "";
-            }
-
-        
-            > li {
-              display: flex;
-              flex-wrap: wrap;
-              flex: 1;
-              background-color: $green-brand;
-              border-bottom: 5px solid $green-bottle;
-              
-              > a {
-                display: block;
-                position: relative;
-                padding: .8rem 1rem .5rem;
-                border-bottom: none;
-              }
-
-              > .btn-expander {
-                align-self: flex-start;
-              }
-              
-              > ul {
-                display: flex;
-                flex-direction: column;
-                padding-top: .5rem;
-                flex-grow: 0;
-                flex-basis: 100%;
-                
-                > li {
-                  position: relative;
-                  border-left: 1px solid rgba( $white, .1 );
-                  margin: 0 1rem;
-                  padding: .5rem;
-
-                  > a {
-                    padding: 0;
-                  }
-                  
-                  &:not(:last-child) {
-                    &:after {
-                      position: absolute;
-                      bottom: 0;
-                      content: "";
-                      width: 100%;
-                      display: block;
-                      border-bottom: 1px solid $green-bottle;
-                    }
-                  }
-                }
-              }
-              
-              &:last-child {
-                .btn-expander {
-                  right: 0;
-                }
-              }
-
-              &.active {
-
-                > ul {
-
-                  li {
-                    border-left: 1px solid rgba(255, 255, 255, 0.8);
-
-                    &:not(:last-child) {
-                      &:after {
-                        border-bottom: 1px solid $green-brand;
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-
-          @include breakpoint (desktop) {
-            > li {
-              border-radius: $radius-small $radius-small 0 0;
-
-              > a {
-                border-radius: $radius-small 0 0 0;
-              }
-
-              &.active {
-                background-color: #0D4B2F;
-                border-bottom: 5px solid $green-brand;
-
-                > a {
-                  background-color: $green-bottle;
-                }
-              }
-            }
-            &.expanded {
-              
-              > li {
-
-                &:not(:last-child) {
-                  margin-right: 1rem;
-                }
-                > .btn-expander {
-                  right: 0;
-                  top: .5rem;
-                  transform: none;
-                  margin-top: .5rem;
-
-                  &::after {
-                    @include objectify( $position: relative );
-                    @include triangle( up, .5em, .2em, $white );
-                    top: -.15em;
-                  }
-          
-                  @include hoverify() {
-                    &::after {
-                      @include triangle( up, .5em, .2em, $grey-alto);
-                    }
-                  }
-                }
-
-                &.active {
-                  box-shadow: $shadow;
-                  transform: translate3d(0, -1%, 0) scale(1.02) perspective(1px) translateZ(0);
-                  backface-visibility: hidden;
-                  background-color: #0D4B2F;
-                  border-bottom: 5px solid $green-brand;
-                  will-change: auto;
-
-
-                  > a {
-                    background-color: #0D4B2F;
-                  }
-
-                }
-
-                &:hover {
-                  &:not(.active) {
-                    @include slideOutUp;
-                    z-index: $z-index-default;
-                    box-shadow: $shadow;
-
-                    a {
-                      color: $white;
-                    }
-                  }
-                }
-              }
-            }
-          }
-
-          @include breakpoint( $until: desktop ) {
-            display: block;
-
-            > li {
-              border-bottom: 5px solid #0D4B2F;
-              > a {
-                padding: 0.5rem 1rem;
-                border-bottom: none;
-                border-radius: 0;
-              }
-
-              &.active {
-                background-color: $green-bottle;
-                border-bottom: 5px solid $green-brand;
-
-                > a {
-                  background-color: $green-bottle;
-                }
-              }
-
-              .btn-expander {
-                height: 1.6em;
-                width: 1.6em;
-                line-height: 1.5;
-                font-size: 1.3em;
-                margin-top: .2rem;
-              }
-            }
-
-            li {
-              width: auto;
-            }
-
-            &.expanded {
-              > li {
-                .btn-expander::after { 
-                  @include objectify( $position: relative );
-                  @include triangle( down, .5em, .2em, $white );
-                  top: -.15em;
-                }
-                
-                a {
-                  @include hoverify() {
-                    color: $white;
-                  }
-                }
-
-                > ul {
-                  display: none;
-                }
-
-                &.js-dropdown-show {
-                  padding-bottom: 1rem;
-                
-                  > .btn-expander {
-                    right: 0;
-                    top: .5rem;
-                    transform: none;
-                    &::after {
-                      @include objectify( $position: relative);
-                      @include triangle( up, .5em, .2em, $white);
-                      top: -.15em;
-                    }
-                    @include hoverify() {
-                      &::after {
-                        @include triangle( up, .5em, .2em, $grey-alto);
-                      }
-                    }
-                  }
-
-                  > ul {
-                    display: flex;
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-
-    }
-
-    &.mega-menu-bar,
-    &.mega-menu-bar--alt {
-      margin-top: 0;
-      background-color: $green-brand;
-      border-bottom: 5px solid $green-bottle;
-
-      nav {
-        > ul {
-
-          > li {
-            border-bottom: none;
-            
-            @include breakpoint( desktop ) {
-              display: block;
-              margin-top: $gap-half;
-              margin-bottom: $gap-half;
-              border-left: 1px solid $white;
-            }
-
-            &:first-child {
-              font-weight: $weight-bold;
-              font-size: 1.1rem;
-            }
-
-            > a {
-              @include breakpoint( desktop ) {
-                padding-top: 0px;
-                padding-bottom: 0;
-
-                &::after {
-                  display: none !important;
-                }
-              }
-
-              @include breakpoint(desktop-large) {
-                white-space: nowrap;
-              }
-
-              @include hoverify() {
-                text-decoration: none;
-                transition: none;
-              }
-              
-            }
-
-            &:not(.expanded) {
-              .btn-expander {
-                &::after {
-                  content: '+';
-                  border:none;
-                  width: auto;
-                  height: auto;
-                }
-              }
-            }
-
-            @include hoverify() {
-              .btn-expander {
-                color: $white;
-                background-color: rgba( $black, .2 );
-              }
-            }
-
-            @include breakpoint (desktop) {
-
-              > a {
-                display: flex;
-                justify-content: space-between;
-              }
-
-              &.active {
-                border-bottom: none;
-                background-color: transparent;
-
-                > a {
-                  background-color: inherit;
-                }
-              }
-            }
-
-          }
-
-
-          &.expanded {
-            .bg {
-              display: none;
-            }
-            > li {
-              border-bottom: none;
-
-              @include breakpoint(desktop) {
-                display: block;
-              }
-
-              @include hoverify() {
-                background-color: $green-bottle;
-
-                > a {
-                  background-color: $green-bottle;
-                }
-              }
-
-            }
-
-            @include breakpoint (desktop) {
-
-              > li {
-                border-left: none;
-                
-                > a {
-                  display: flex;
-                  justify-content: space-between;
-                }
-
-                .btn-expander {
-                  &::after {
-                    content: '-';
-                  }
-                  &:hover {
-                    &:after {
-                      width: auto;
-                      height: auto;
-                      border:0px;
-                    }
-                  }
-                }
-
-                &.active {
-                  border-bottom: none;
-                  transform: none;
-                }
-
-                &:hover {
-                  &:not(.active) {
-                    animation-name: none;
-                    li {
-                      &:not(:last-child) {
-                        &:after {
-                          border-bottom: 1px solid #115737;
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-
-          @include breakpoint( $until: desktop ) {
-            > li {
-              border-bottom: 5px solid $green-bottle !important;
-              > a {
-                display: flex;
-                justify-content: space-between;
-
-                .btn-expander {
-                  &::after {
-                    @include objectify( $position: relative);
-                    @include triangle( down, .5em, .2em, $white);
-                    top: -.15em;
-                  }
-                }
-
-              }
-
-            }
-            &.expanded {
-              > li {
-
-                > a {
-                  display: flex;
-                  justify-content: space-between;
-  
-                }
-
-                &.js-dropdown-show {
-                  padding-bottom: 1rem;
-                }
-
-                &.active {
-                  border-bottom: 5px solid #115737 !important;
-                }
-              }
-            }
-          }
-        }
-
-      }
-
-      @include breakpoint( $until: desktop ) {
-        border-bottom: none;
-      }
-    }
-
-    &.mega-menu-bar--alt {
-      .mega-menu-inner > li {
-        &:first-child {
-          border-left: none;
-        }
-
-        > a {
-          @include breakpoint(desktop) {
-            justify-content:center;
-          }
-        }
-
-        .btn-expander {
-          @include breakpoint(desktop) {
-            display: none;
-          }
-        }
-      }
-    }
-  }
+.c-megamenu {
+  background-color: $green-brand;
 }
 
-.mega-menu-nav {
+.c-megamenu__inner {
   @include breakpoint(desktop) {
-    float:left;
-    width: 95%;
+    display: flex;
   }
 }
 
-.btn-expander--external {
-  position: relative;
-  top: -3px;
-  font-size: 30px;
-  color: $white;
-
+.c-megamenu__item {
   @include breakpoint($until: desktop) {
-    display: none;
+    border-bottom: 5px solid $green-bottle;
   }
+
+  @include breakpoint(desktop) {
+    flex-basis: 100%;
+    flex-grow: 1;
+  }
+
+  .is-expanded & {
+    &:hover {
+      background:$green-bottle;
+      box-shadow: $shadow;
+    }
+  }
+}
+
+.c-megamenu__link {
+  display: block;
+  padding: $gap-half;
+  
+  color: $white;
+  font-family: $heading-family;
+  font-size: $navigation-primary-item-size;
+  color: $white;
+  text-decoration: none;
+  letter-spacing: $navigation-letter-spacing;
+  font-weight: 600;
+}
+
+.c-megamenu__itemIcon {
+  float:right;
+
+  i:before {
+    margin: 0;
+  }
+}
+
+.c-megamenu__childItem {
+  margin-left: $gap-small;
+}
+
+.c-megamenu__childList {
+  display: none;
+  margin: 0 $gap $gap-half;
+  border-left: 1px solid rgba( $white, .1 );
+
+  @include breakpoint(desktop) {
+    margin-left: $gap-half;
+  }
+
+  .js-dropdown-show &,
+  .is-expanded & {
+    display: block;
+  }
+}
+
+.c-megamenu__childLink {
+  display: block;
+  padding: $gap-small $gap-half;
+  color: $grey-alto;
+  border-bottom: 1px solid $green-bottle;
 }
