--- a/src/views/prototypes/our-researchers-megamenu-banner-bar.html
+++ b/src/views/prototypes/our-researchers-megamenu-banner-bar.html
@@ -55,22 +55,20 @@ footer:
         </figure>
       </div>
 
-        <section class="page-sub-nav nav-buttons hub-mega-menu mega-menu-bar" data-gtm-track>
+        <section class="page-sub-nav nav-buttons hub-mega-menu mega-menu-bar c-megamenu" data-gtm-track>
           <div class="centraliser">
 
               <nav role="navigation">
-                <ul role="menubar" class="mega-menu-inner ">
+                <ul role="menubar" class="mega-menu-inner c-megamenu__inner">
                   
                   <div class="bg"></div>
                   <!-- <li>
                     <a role="menuitem" title="Course finder" href="{{baseurl}}/prototypes/research.html">Home</a>
                   </li> -->
-                  <li class="">
-                    <a role="menuitem" title="Course finder" href="{{baseurl}}/prototypes/research-strengths.html" class="">Research strengths </a>
-                    <span class="btn-expander" title="Toggle subpages"></span>
-                    
+                  <li class="c-megamenu__item">
+                    <a role="menuitem" title="Course finder" href="{{baseurl}}/prototypes/research-strengths.html" class="">Research strengths <span aria-haspopup="true" class="btn-expander" title="Toggle subpages"></span></a>
 
-                    <ul>
+                    <ul class="c-megamenu__childList">
 
                       <li><a title="" href="#">Research success</a></li>
                       <li><a title="" href="#">Performance and rankings</a></li>
