--- a/src/views/prototypes/our-researchers-megamenu-banner-bar.html
+++ b/src/views/prototypes/our-researchers-megamenu-banner-bar.html
@@ -55,87 +55,7 @@ footer:
         </figure>
       </div>
 
-        <section class="page-sub-nav nav-buttons hub-mega-menu mega-menu-bar c-megamenu" data-gtm-track>
-          <div class="centraliser">
-
-              <nav role="navigation">
-                <ul role="menubar" class="mega-menu-inner c-megamenu__inner">
-                  
-                  <div class="bg"></div>
-                  <!-- <li>
-                    <a role="menuitem" title="Course finder" href="{{baseurl}}/prototypes/research.html">Home</a>
-                  </li> -->
-                  <li class="c-megamenu__item">
-                    <a role="menuitem" title="Course finder" href="{{baseurl}}/prototypes/research-strengths.html" class="">Research strengths <span aria-haspopup="true" class="btn-expander" title="Toggle subpages"></span></a>
-
-                    <ul class="c-megamenu__childList">
-
-                      <li><a title="" href="#">Research success</a></li>
-                      <li><a title="" href="#">Performance and rankings</a></li>
-                      <li><a title="" href="#">Research impact</a></li>
-                      <li><a title="" href="#">Faculty research</a></li>
-                      <li><a title="" href="#">Centres, institutes and chairs</a></li>
-                      <li><a title="" href="#">News and commentary</a></li>
-                      <li><a title="" href="#">Research focus</a></li>
-                    </ul>
-                  </li>
-
-                  <li>
-                    <a role="menuitem" title="Faculties and Schools" href="{{baseurl}}/prototypes/research-degrees.html" class="">Research degrees</a>
-                    <span class="btn-expander" title="Toggle subpages"></span>
-
-                    <ul>
-
-                      <li><a title="" href="#">PhDs and research degrees</a></li>
-                      <li><a title="" href="#">Postgraduate community</a></li>
-                      <li><a title="" href="#">Find a supervisor</a></li>
-                      <li><a title="" href="#">Funding your study</a></li>
-                      <li><a title="" href="#">How to apply</a></li>
-                      <li><a title="" href="#">Research areas</a></li>
-                    </ul>
-                  </li>
-                  <li role="menuitem">
-                    <a href="{{baseurl}}/prototypes/research-partnerships.html" role="menuitem" title="Read about Campuses">Research partnerships</a>
-                    <span class="btn-expander" title="Toggle subpages"></span>
-
-                    <ul>
-
-                      <li><a title="" href="#">Support our research</a></li>
-                      <li><a title="" href="#">Research collaboration</a></li>
-                      <li><a title="" href="#">Commercialising research</a></li>
-                      <li><a title="" href="#">Engage our students</a></li>
-                      <li><a title="" href="#">Māori research partnerships</a></li>
-                      <li><a title="" href="#">Development and education</a></li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a role="menuitem" title="" href="{{baseurl}}/prototypes/research-strengths.html" class="">Find a researcher</a>
-                    <span class="btn-expander" title="Toggle subpages"></span>
-
-                    <ul>
-                      <li><a title="" href="#">Find an expert </a></li>
-                      <li><a title="" href="#">Featured researchers</a></li>
-                      <li><a title="" href="#">Performance and rankings</a></li>
-                    </ul>
-                  </li>
-                  <li class="active">
-                    <a role="menuitem" title="Faculties and Schools" href="{{baseurl}}/prototypes/our-researchers.html" class="active">Support for researchers</a>
-                    <span class="btn-expander" title="Toggle subpages"></span>
-
-                    <ul>
-
-                      <li><a title="" href="#">Research ethics</a></li>
-                      <li><a title="" href="#">Māori research practices</a></li>
-                      <li><a title="" href="#">New research staff</a></li>
-                      <li><a title="" href="#">Research Office</a></li>
-                    </ul>
-                  </li>
-                  
-                </ul>
-              </nav>
-
-          </div>
-        </section>
+      {{> navigation.megamenu}}
 
     <!-- Search panel -->
       <!-- <div class="centraliser">
